[gd_scene load_steps=8 format=3 uid="uid://dklspr04f1kxx"]

[ext_resource type="Script" path="res://scenes/characters/mob_shooter.gd" id="1_0dlng"]
[ext_resource type="Shader" path="res://scenes/characters/mob.gdshader" id="2_mqo7q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1si3g"]
resource_local_to_scene = true
shader = ExtResource("2_mqo7q")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_s30mr"]
load_path = "res://.godot/imported/shooter_ball_1.png-316d8cde57d2b252bb7c07e08f84ae38.ctex"

[sub_resource type="CircleShape2D" id="CircleShape2D_p8t4m"]
radius = 25.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_80fl2"]
radius = 3.1552
height = 36.3499

[sub_resource type="CircleShape2D" id="CircleShape2D_6io3h"]
radius = 148.003

[node name="MobShooter" type="CharacterBody2D" groups=["mobs"]]
collision_layer = 2
collision_mask = 23
motion_mode = 1
script = ExtResource("1_0dlng")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_1si3g")
rotation = 1.5708
scale = Vector2(0.15, 0.15)
texture = SubResource("CompressedTexture2D_s30mr")

[node name="CollisionCore" type="CollisionShape2D" parent="."]
position = Vector2(-10.4, 0)
shape = SubResource("CircleShape2D_p8t4m")

[node name="CollisionLeftArm" type="CollisionShape2D" parent="."]
position = Vector2(16, -25)
rotation = -1.31598
shape = SubResource("CapsuleShape2D_80fl2")

[node name="CollisionRightArm" type="CollisionShape2D" parent="."]
position = Vector2(16, 25)
rotation = -1.7942
shape = SubResource("CapsuleShape2D_80fl2")

[node name="DetectPlayerArea" type="Area2D" parent="."]
collision_layer = 128
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayerArea"]
shape = SubResource("CircleShape2D_6io3h")

[node name="SeekPlayerTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
speed_scale = 10.0
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 40.28
direction = Vector2(5, 0)
spread = 112.27
gravity = Vector2(0, 0)
scale_amount_min = 0.5
scale_amount_max = 2.0
color = Color(0.733333, 0.717647, 0, 1)
hue_variation_max = 1.0

[node name="DeathTimer" type="Timer" parent="."]

[node name="HitFlashTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="DamageDisplayMarkers" type="Node2D" parent="."]

[node name="DamageMarkerC" type="Marker2D" parent="DamageDisplayMarkers"]
position = Vector2(0, -15)

[node name="DamageMarkerL" type="Marker2D" parent="DamageDisplayMarkers"]
position = Vector2(-13, -15)

[node name="DamageMarkerR" type="Marker2D" parent="DamageDisplayMarkers"]
position = Vector2(13, -15)

[node name="DamageText" type="Node2D" parent="."]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="FireCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FireMarker" type="Marker2D" parent="." groups=["mobs"]]
position = Vector2(39, 0)

[connection signal="body_entered" from="DetectPlayerArea" to="." method="_on_detect_player_area_body_entered"]
[connection signal="body_exited" from="DetectPlayerArea" to="." method="_on_detect_player_area_body_exited"]
[connection signal="timeout" from="SeekPlayerTimer" to="." method="_on_seek_player_timer_timeout"]
[connection signal="timeout" from="HitFlashTimer" to="." method="_on_hit_flash_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="FireCooldownTimer" to="." method="_on_fire_cooldown_timer_timeout"]
